{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 62,
  "lineage": "616ef5a1-0d4a-f1ab-6819-0ae994659673",
  "resources": [
    {
      "module": "module.ghost.module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ghost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-064613c6aae4071fd",
            "domain": "vpc",
            "id": "eipalloc-0146421cd74acbfc4",
            "instance": "i-09abb4e04c3ee4dc1",
            "network_border_group": "us-west-2",
            "network_interface": "eni-06704d7866111b6ba",
            "private_dns": "ip-172-31-0-154.us-west-2.compute.internal",
            "private_ip": "172.31.0.154",
            "public_dns": "ec2-52-11-168-9.us-west-2.compute.amazonaws.com",
            "public_ip": "52.11.168.9",
            "public_ipv4_pool": "amazon",
            "tags": {
              "BuildVersion": "0.0.0",
              "CommitHash": "c42e94b3fc1f1d377241811b859cbbb5b71106de",
              "Environment": "development",
              "Name": "development.us-west-2.eip.ghost",
              "Region": "us-west-2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ghost.module.ec2.aws_network_interface.ghost",
            "module.ghost.module.security.aws_security_group.ghost",
            "module.ghost.module.vpc.aws_subnet.public",
            "module.ghost.module.vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ghost.module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ghost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002f05c0e3cd98cb8",
            "arn": "arn:aws:ec2:us-west-2:304783710577:instance/i-0784ba5ffa149beeb",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0784ba5ffa149beeb",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f14:41:6300:fdea:5f43:f9d2:30a7"
            ],
            "key_name": "pangu",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-06704d7866111b6ba"
              }
            ],
            "primary_network_interface_id": "eni-06704d7866111b6ba",
            "private_dns": "ip-172-31-0-154.us-west-2.compute.internal",
            "private_ip": "172.31.0.154",
            "public_dns": "ec2-52-11-168-9.us-west-2.compute.amazonaws.com",
            "public_ip": "52.11.168.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04eba02091c30fa4f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "development.us-west-2.sg.ghost"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-093cf21d25f0cce22",
            "tags": {
              "BuildVersion": "0.0.0",
              "CommitHash": "c42e94b3fc1f1d377241811b859cbbb5b71106de",
              "Environment": "development",
              "Name": "development.us-west-2.ec2.ghost",
              "Region": "us-west-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-018a10681cd38fdea"
            ]
          },
          "dependencies": [
            "module.ghost.module.ec2.aws_network_interface.ghost",
            "module.ghost.module.ec2.data.aws_ami.ghost",
            "module.ghost.module.security.aws_security_group.ghost",
            "module.ghost.module.vpc.aws_subnet.public",
            "module.ghost.module.vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ghost.module.ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ghost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-02fc69d439e37229b",
                "device_index": 0,
                "instance": "i-09abb4e04c3ee4dc1"
              }
            ],
            "id": "eni-06704d7866111b6ba",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f14:41:6300:fdea:5f43:f9d2:30a7"
            ],
            "mac_address": "06:59:bd:95:c5:37",
            "private_dns_name": "ip-172-31-0-154.us-west-2.compute.internal",
            "private_ip": "172.31.0.154",
            "private_ips": [
              "172.31.0.154"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-018a10681cd38fdea"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-093cf21d25f0cce22",
            "tags": {
              "BuildVersion": "0.0.0",
              "CommitHash": "c42e94b3fc1f1d377241811b859cbbb5b71106de",
              "Environment": "development",
              "Name": "development.us-west-2.ni.ghost",
              "Region": "us-west-2"
            }
          },
          "dependencies": [
            "module.ghost.module.security.aws_security_group.ghost",
            "module.ghost.module.vpc.aws_subnet.public",
            "module.ghost.module.vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ghost.module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ghost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:304783710577:security-group/sg-018a10681cd38fdea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018a10681cd38fdea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "development.us-west-2.sg.ghost",
            "name_prefix": "",
            "owner_id": "304783710577",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-26d5a85e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ghost.module.vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ghost.module.vpc",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:304783710577:internet-gateway/igw-777cda0e",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-26d5a85e"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-26d5a85e"
                ]
              }
            ],
            "id": "igw-777cda0e",
            "internet_gateway_id": "igw-777cda0e",
            "owner_id": "304783710577"
          }
        }
      ]
    },
    {
      "module": "module.ghost.module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:304783710577:vpc/vpc-26d5a85e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a2e2560",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-77deb40f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-26d5a85e",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0f3c944981d8b7866",
            "ipv6_cidr_block": "2600:1f14:41:6300::/56",
            "main_route_table_id": "rtb-2fdd8354",
            "owner_id": "304783710577",
            "state": "available",
            "tags": {
              "Environment": "development",
              "Region": "us-west-2"
            }
          }
        }
      ]
    },
    {
      "module": "module.ghost.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ghost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a37903ce6d1190fe",
            "owner_id": "304783710577",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-777cda0e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BuildVersion": "0.0.0",
              "CommitHash": "c42e94b3fc1f1d377241811b859cbbb5b71106de",
              "Environment": "development",
              "Name": "development.us-west-2.rtb.ghost",
              "Region": "us-west-2"
            },
            "vpc_id": "vpc-26d5a85e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ghost.module.vpc.data.aws_internet_gateway.gateway",
            "module.ghost.module.vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ghost.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ghost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a11f55d7807afe42",
            "route_table_id": "rtb-0a37903ce6d1190fe",
            "subnet_id": "subnet-093cf21d25f0cce22"
          },
          "dependencies": [
            "module.ghost.module.vpc.aws_route_table.ghost",
            "module.ghost.module.vpc.aws_subnet.public",
            "module.ghost.module.vpc.data.aws_internet_gateway.gateway",
            "module.ghost.module.vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ghost.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:304783710577:subnet/subnet-093cf21d25f0cce22",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.0.0/24",
            "id": "subnet-093cf21d25f0cce22",
            "ipv6_cidr_block": "2600:1f14:41:6300::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0afc32415bb6556dc",
            "map_public_ip_on_launch": true,
            "owner_id": "304783710577",
            "tags": {
              "BuildVersion": "0.0.0",
              "CommitHash": "c42e94b3fc1f1d377241811b859cbbb5b71106de",
              "Environment": "development",
              "Name": "development.us-west-2a.subnet.public.ghost",
              "Region": "us-west-2"
            },
            "vpc_id": "vpc-26d5a85e"
          },
          "dependencies": [
            "module.ghost.module.vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}